# ncollpyde

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  Cargo.toml  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  visualise.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml  ci.yml
benches/: containment.rs
ci/travis/: deploy.sh  setup_rust.sh  test.sh
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  ncollpyde.rst  requirements.txt  usage.rst
meshes/: SEZ_right.stl  cube.stl
ncollpyde/: __init__.py  main.py  ncollpyde.pyi
python/ncollpyde/: __init__.py  _ncollpyde.pyi  main.py
scripts/: cargo_hack.sh
src/: interface.rs  lib.rs  utils.rs
tests/: conftest.py  test_bench.py  test_ncollpyde.py
