[package]
authors = ["Chris L. Barnes <chrislloydbarnes@gmail.com>"]
name = "ncollpyde"
version = "0.14.0"
description = "A python wrapper around a subset of the ncollide rust library"
readme = "README.rst"
edition = "2018"

[package.metadata.maturin]
requires-dist = ["numpy>=1.16.0", "trimesh[easy]>=3.7.7; extra == 'validate'"]
requires-python = ">=3.6"
classifier = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
provides-extra = ["validate"]

[dependencies]
pyo3 = { version = "0.12.3", features = ["extension-module"] }
ncollide3d = "0.26.0"
rayon = "1.5.0"
rand = "0.7.3"
rand_pcg = "0.2.1"

[dev-dependencies]
stl_io = "0.4.2"
cargo-release = "0.13.4"

[lib]
name = "ncollpyde"
crate-type = ["cdylib"]

[package.metadata.release]
disable-publish = true
no-dev-version = true
