[project]
name = "ncollpyde"
# version = "0.19.0"
description = "Point/line-mesh intersection queries in python"
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Chris L. Barnes", email = "chrislloydbarnes@gmail.com"},
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
validate = ["trimesh[easy]>=3.7.7"]

[project.urls]
homepage = "https://pypi.org/project/ncollpyde/"
documentation = "https://ncollpyde.readthedocs.io/"
repository = "https://github.com/clbarnes/ncollpyde/"

[build-system]
requires = ["maturin==0.14", "numpy>=1.21"]
build-backend = "maturin"

[tool.mypy]
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]
python_version = "3.8"

[tool.ruff]
extend-exclude = ["docs"]
target-version = "py38"
